guestbook-app/guestbook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
  labels:
    app: guestbook
    tier: frontend
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: guestbook
    tier: frontend
